--- a/pom.xml
+++ b/pom.xml
@@ -14,5 +14,11 @@
       <version>3.8.1</version>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>org.projectlombok</groupId>
+      <artifactId>lombok</artifactId>
+      <version>1.18.34</version> <!-- замените на актуальную версию -->
+      <scope>provided</scope>
+    </dependency>
   </dependencies>
 </project>
