--- a/pom.xml
+++ b/pom.xml
@@ -30,5 +30,12 @@
       <artifactId>json</artifactId>
       <version>20231013</version>
     </dependency>
+    <!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-core -->
+    <dependency>
+      <groupId>com.fasterxml.jackson.core</groupId>
+      <artifactId>jackson-core</artifactId>
+      <version>2.18.0</version>
+    </dependency>
+
   </dependencies>
 </project>
